addons/kustomize/oss/kyverno/base/deny-latest-image/.kyverno-test/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod
spec:
  containers:
    - image: busybox:latest
      name: busybox
